--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -87,6 +87,29 @@
 			</div>
 			<div class="log5"></div>
 		</div>
+		<!--おすすめのやど-->
+		<!--		<div class="recommend">-->
+		<!--			<div class="recommend2">-->
+		<!--				<div th:each="hotel : ${hotels}">-->
+		<!--					<a th:href="@{/hotelsdetail/{id}(id=${hotel.id})}">-->
+		<!--						<div class="div4">-->
+		<!--							<img th:src="${hotel.image}" height="170px" width="100%" alt="ホテル画像">-->
+		<!--							<div class="popo">-->
+		<!--								<h3 th:text="${hotel.name}"></h3>-->
+		<!--								<div th:text="${hotel.address}"></div>-->
+		<!--							</div>-->
+		<!--							<div class="popo2">-->
+		<!--								<div th:text="${hotel.capacity} + '名 税込　'"></div>-->
+		<!--								<h3 th:text="${hotel.price} + '円'"></h3>-->
+		<!--							</div>-->
+		<!--														<div th:text="${hotel.capacity}"></div>-->
+		<!--						</div>-->
+		<!--					</a>-->
+		<!--				</div>-->
+		<!--			</div>-->
+		<!--		</div>-->
+		<h2 class="midashi">今すぐ予約</h2>
+
 		<div class="aa">
 
 
@@ -115,10 +138,16 @@
 				<div class="col" th:each="hotel : ${hotels}">
 					<a th:href="@{/hotelsdetail/{id}(id=${hotel.id})}">
 						<div class="div4">
-							<img th:src="${hotel.image}" height="140px" alt="ホテル画像">
-							<h3 th:text="${hotel.name}"></h3>
-							<div th:text="${hotel.price} + '円'"></div>
-							<div th:text="${hotel.capacity}"></div>
+							<img th:src="${hotel.image}" height="170px" width="100%" alt="ホテル画像">
+							<div class="popo">
+								<h3 th:text="${hotel.name}"></h3>
+								<div th:text="${hotel.address}"></div>
+							</div>
+							<div class="popo2">
+								<div th:text="${hotel.capacity} + '名 税込　'"></div>
+								<h3 th:text="${hotel.price} + '円'"></h3>
+							</div>
+							<!--							<div th:text="${hotel.capacity}"></div>-->
 						</div>
 					</a>
 				</div>
