--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -8,19 +8,26 @@
 </head>
 
 <body>
-	<header>
-		<h1>休.com</h1>
-	</header>
-	[[${@account.name}]]さんのご予約履歴<br>
-	<div th:each="hotels:${hotel}">
-		<span th:text="${hotels.name}"></span>
-	</div>
-<!--	<main class="history-main1">-->
-<!--		<img src="/image/1-1.jpg" class="history-image" width="300px" height="200px"><br>-->
-<!--	</main>-->
-<!--	<main class="history-main2">-->
-<!--		<img src="/image/1-10.jpg" width="300px" height="200px"><br>-->
-<!--	</main>-->
+	<span th:replace="header2">
+	</span>
+
+	<a style="font-size: 35px;">[[${@account.name}]]さんのご予約履歴</a><br>
+	<main class="history-main1">
+		<div th:each="hotels:${hotel}">
+			<span class="flex">
+			<span th:text="宿泊施設名：+${hotels.name}" class="history-hotelName"></span><br>
+			<img th:src="${hotels.image}" height="140px" alt="ホテル画像">
+			<div th:each="reservation:${reservations}">
+				<span th:if="${hotels.id} == ${reservation.hotelId}">
+				<span th:text="宿泊日：+${reservation.date}"></span><br>
+				</span>
+			</div>
+			<span th:text="宿泊人数：+${hotels.capacity}+人"></span><br>
+			<span th:text="値段：+${hotels.price}+円" class="history-price"></span>
+			</span>
+			<hr>
+		</div>
+	</main>
 	<div style="text-align: center;">
 		<a href="/mypage">マイページへ</a>
 	</div>
