CSS変更・修正

--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -11,6 +11,8 @@
 	<h3>宿の予約が完了しました<br>
 	<span th:text="${hotels.name}"></span>
 	<span th:text="${hotels.address}"></span>
+	<br>
+	<span th:text="${reservation.date}"></span>
 	
     ご利用ありがとうございます</h3>
 	<form action="/hotels" method="get">
