--- a/src/main/resources/static/css/Jung.css
+++ b/src/main/resources/static/css/Jung.css
@@ -8,6 +8,10 @@ header button {
 	font-family: 'M PLUS 1p', sans-serif;
 }
 
+.header2_nav{
+	align-items: right;
+}
+
 .logo {
 
 	position: absolute;
@@ -60,6 +64,17 @@ header button {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: relative;
+	z-index: 60;
+}
+
+.key2 {
+	left: 20%;
+	width: 75%;
+	height: 70px;
+	display: flex;
+	justify-content: space-between;
+	align-items: r;
 	position: relative;
 	z-index: 60;
 }
@@ -165,6 +180,7 @@ nav ul li a {
 body {
 	background-color: #EFF0F7;
 }
+
 
 h4 {
 	text-align: center;
@@ -544,10 +560,11 @@ label {
 	margin-bottom: 10px;
 }
 
-/* 비밀번호 보기 버튼 (input 우측에 겹치게 배치) */
+/* 비밀번호 보기 버튼 input 우측에 겹치게 배치*/
 .toggle-btn {
+  all: unset;
   position: absolute;
-  right: 10px;
+  right: 0px;
   top: 50%;
   transform: translateY(-50%);
   background: transparent;
