--- a/src/main/resources/static/css/Aikawa.css
+++ b/src/main/resources/static/css/Aikawa.css
@@ -11,8 +11,8 @@ header button {
 .logo {
 
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 1%;
+	left: 1%;
 	z-index: 50;
 }
 
@@ -862,7 +862,7 @@ a:hover {
 	/* アニメーション効果 */
 }
 
-.midashi{
+.midashi {
 	padding-left: 5%;
 	font-family:
 		"Yu Mincho",
@@ -872,6 +872,160 @@ a:hover {
 		"游ゴシック",
 		/* 日本語名（念のため） */
 		"M PLUS 1p",
-		 次の候補 
-		sans-serif;
+		次の候補 sans-serif;
+}
+
+.recommend {
+	width: 90%;
+	display: flex;
+	margin: auto;
+}
+
+.recommend2 {
+	width: 45%;
+	justify-content: space-between;
+}
+
+.recommend2 {
+	object-fit: fill;
+}
+
+.recommend {
+	width: 90%;
+	max-width: 1340px;
+	margin: 0 auto;
+	display: flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	row-gap: 20px;
+	justify-content: space-between;
+}
+
+.recommend2 {
+	height: 30vh;
+	width: 49%;
+	border-radius: 6px;
+	overflow: hidden;
+	box-shadow: 0 0 8px rgba(0, 0, 0, .25);
+	text-align: justify;
+	font-size: 13px;
+	position: relative;
+}
+
+.recommend2 img {
+	filter: brightness(0.7);
+}
+
+.row1 {
+	width: 90%;
+	max-width: 1340px;
+	margin: 0 auto;
+	display: flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	row-gap: 20px;
+	justify-content: space-between;
+}
+
+.row2 {
+	width: 90%;
+	max-width: 1340px;
+	margin: 0 auto;
+	display: flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	row-gap: 20px;
+	justify-content: space-between;
+}
+
+.col2 {
+
+	background-color: rgb(255, 255, 255);
+	width: 23%;
+	height: 300px;
+	border-radius: 6px;
+	overflow: hidden;
+	box-shadow: 0 0 8px rgba(0, 0, 0, .25);
+	text-align: justify;
+	font-size: 13px;
+}
+
+.col2:hover {
+	/* ホバー時の状態 */
+	filter: brightness(0.8);
+	/* 暗くする */
+	transition: filter 0.3s ease;
+	/* アニメーション効果 */
+}
+
+/*レスポンシブ対応*/
+@media screen and (max-width: 768px) {
+	.col {
+		width: 48%;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.col {
+		width: 100%;
+	}
+}
+
+.carousel {
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+
+	/* スタイル調整 */
+	display: flex;
+	gap: 16px;
+	width: 90%;
+	margin: 0px;
+	padding: 16px 0px;
+	margin-left: 5%;
+	
+
+	 /** スクロールボタンをクリックしたとき、スムーズにスクロールする */
+	 scroll-behavior: smooth;
+
+	 /* ... */
+	 &::scroll-button(right) {
+	   position: absolute;
+	   top: 40%;
+	   right: 20;
+	   content: "⮕" / "Scroll Right";
+	 }
+
+	 &::scroll-button(left) {
+	   position: absolute;
+	   top: 40%;
+	   left: 20;
+	   content: "⬅" / "Scroll Left";
+	 }
+
+	 &::scroll-button(*) {
+	   width: 50px;
+	   height: 50px;
+	   background-color: transparent;
+	   border-radius: 50%;
+	   color: #fff;
+	   border: 1px solid #444;
+	 }
+
+	 &::scroll-button(*):hover {
+	   background-color: #444;
+	   color: #fff;
+	 }
+}
+
+.carousel-item {
+	scroll-snap-align: center;
+	background-color: rgb(255, 255, 255);
+	width: 23%;
+	height: 300px;
+	border-radius: 6px;
+	overflow: hidden;
+	box-shadow: 0 0 8px rgba(0, 0, 0, .25);
+	text-align: justify;
+	font-size: 13px;
+	flex-shrink: 0;
 }
