--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -22,7 +22,7 @@
 			<input type="text" name="email" placeholder="*メールアドレス"><br>
 			<input type="text" name="address" placeholder="*住所"><br>
 			<input type="text" name="tel" placeholder="*電話番号"><br>
-			<input type="password" name="password" placeholder="*パスワード（8文字以上）"><br>
+			<input type="password" name="password" placeholder="*パスワード（半角英数字8文字以上）"><br>
 			<input type="text" name="cardNo" placeholder="クレジットカード番号"><br>
 			<input type="text" name="code" placeholder="セキュリティコード"><br>
 			<input type="text" style="width: 80px;" name="expiry" placeholder="月">
