--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/css/tachiki.css">
 </head>
 <body>
-	<span th:replace="header2">
+	<span th:replace="header">
 	</span>
 	<h1 class="mypage-title">マイページ</h1>
 	<form class="mypage-form" th:action="@{/mypage/edit}" method="get">
