--- a/src/main/resources/templates/header2.html
+++ b/src/main/resources/templates/header2.html
@@ -1,3 +1,3 @@
-<header id="header2">
-	<a href="/hotels" class="logo2"><img src="/image/休.com.png" width="8%"></a>
+<header id="header">
+	<a href="/hotels" class="logo"><img src="/image/休.com.png" width="14.5%"></a>
 </header>
