--- a/src/main/resources/static/css/matsumoto.css
+++ b/src/main/resources/static/css/matsumoto.css
@@ -170,7 +170,7 @@ button:hover {
 	justify-content: center;
 }
 
-.right {
+.left {
 	display: flex;
 	justify-content: center;
 }
@@ -187,9 +187,61 @@ button:hover {
 }
 
 li {
+	color: #000000;
+	font-size: 20px;
+	font-family: 'M PLUS 1p', sans-serif;
+
+}
+
+.err li {
 	list-style-position: inside;
 	/* リストマークをコンテンツ内に配置 */
 	margin: 0 10px;
 	/* 左右の余白を調整 */
 	color: red;
 }
+
+.login-container {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+	display: flex;
+	flex-direction: row;
+	/* ← 横並びに変更 */
+	align-items: flex-start;
+	/* 垂直方向の位置調整 */
+	justify-content: space-between;
+	/* カラム間に余白を配置 */
+	gap: 30px;
+}
+.credit-form {
+  flex: 1;
+}
+.form-group {
+	margin-bottom: 15px;
+	width: 100%;
+}
+
+.flex-item {
+  flex: 1;           /* 等分に幅を取得 */
+  box-sizing: border-box;
+}
+
+.hotel-info, .credit-form {
+  margin-top: 50px;
+}
+
+@media (max-width: 768px) {
+  .login-container {
+    flex-direction: column; /* スマホでは縦並びに切り替え */
+    align-items: center;
+  }
+  .flex-item {
+    width: 100%;
+  }
+}
+
