--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>ログイン</title>
+	<link rel="stylesheet" type="text/css" href="/css/matsumoto.css">
+	<meta charset="UTF-8">
+	<title>予約完了</title>
 </head>
-<body>
-	<header>
-		<h1>休.com</h1>
-	</header>
+
+<body style="text-align: center;">
+	<header th:replace="header2"></header>
 	<h3>宿の予約が完了しました<br>
-	<span th:text="${hotels.name}"></span>
-	<span th:text="${hotels.address}"></span>
-	<br>
-	<span th:text="${reservation.date}"></span>
-	
-    ご利用ありがとうございます</h3>
+		<div class="login-container">
+
+			<div class="flex">
+				<img th:src="${hotels.image}" height="170px" alt="ホテル画像">
+				<div>
+					<div th:text="${hotels.name}"></div>
+					<div th:text="${hotels.address}"></div>
+					<div th:text="宿泊人数： + ${hotels.capacity} + 人"></div>
+					<div th:text="値段： + ${hotels.price} + 円"></div>
+					<span th:text="日時： + ${reservation.date}"></span>
+				</div>
+			</div>
+		</div>
+
+			
+
+			ご利用ありがとうございます
+	</h3>
 	<form action="/hotels" method="get">
-    	<button>OK</button>
+		<button>OK</button>
 	</form>
 </body>
+
 </html>
