--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -38,7 +38,7 @@
 <!--			    <img alt="" th:src="${imageUrl}" style="width: 300px;">	-->
 <!--				<button class="login_button" name="imagebtn" th:value="btn">画像確認</button>-->
 			    <br>
-			<button class="button-37">送信</button>
+			<button class="login_button">送信</button>
 			
 			<ul th:if="${errors}" class="error">
 			<li th:each="error : ${errors}" th:text="${error}"></li>
