CSS 中央集合、ロゴの位置変更

--- a/src/main/resources/static/css/Jung.css
+++ b/src/main/resources/static/css/Jung.css
@@ -10,7 +10,8 @@ header button {
 
 
 .logo {
-
+	margin: 20px; 
+	/* 로고 왼쪽 상단에서 조금 떨어지게 해주는거  */
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -541,16 +542,19 @@ ul.ioio {
 
 /*여기부터 정해승 로그인 css*/
 .login-container {
-	max-width: 400px;
+	width: 400px;
 	margin: 0 auto;
 	padding: 20px;
 	background-color: #fff;
 	border-radius: 5px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%)translateX(-50%);
+    /* 폼 중앙에 오게 하는 것들 포지션, 탑, 레프트, 트렌스폼 */
 
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	/* 내부 요소를 가로 중앙 정렬 */
 }
 
